finish crud basics and archives and firts start of api and init test of consume in postman